--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,13 +7,33 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/view_status"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="@color/green_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_action"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_status" />
+
+    <Button
+        android:id="@+id/followBtn"
+        style="@style/Theme.Better.ProfileActionButtonsStyle"
+        android:layout_width="match_parent"
+        android:layout_margin="16dp"
+        android:layout_height="wrap_content"
+        android:text="Follow"
+        app:layout_constraintBottom_toBottomOf="@+id/view_action"
+        app:layout_constraintEnd_toEndOf="@+id/view_action"
+        app:layout_constraintStart_toStartOf="@+id/view_action"
+        app:layout_constraintTop_toBottomOf="@+id/view_status" />
 
     <ImageView
         android:id="@+id/profile_image"
@@ -22,9 +42,9 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
         android:src="@drawable/ic_profile"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/view_status"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view_status"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -108,7 +128,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/view_action" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
