--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -35,7 +35,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@+id/viewHolder_tip_profile_picture"
                 android:padding="4dp"
-                android:textColor="#0095ff"
+                android:textColor="@color/blue"
                 android:textSize="18sp"
                 android:text="Match Name"
                 android:textStyle="bold" />
@@ -92,7 +92,7 @@
                 android:padding="4dp"
                 android:text="Tip Value"
                 android:textSize="12sp"
-                android:textColor="#0095ff"
+                android:textColor="@color/blue"
                 android:textStyle="bold" />
 
             <ImageView
