--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="darkGrey">#858585</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="whiteAlpha">#10FFFFFF</color>
+    <color name="blue">#0095ff</color>
 </resources>
