--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,4 +35,11 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="Theme.Better.ProfileActionButtonsStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:backgroundTint">@color/blue</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
