--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,6 +35,18 @@
         app:layout_constraintStart_toStartOf="@+id/view_action"
         app:layout_constraintTop_toBottomOf="@+id/view_status" />
 
+    <Button
+        android:id="@+id/unFollowBtn"
+        style="@style/Theme.Better.ProfileActionButtonsStyle"
+        android:layout_width="match_parent"
+        android:layout_margin="16dp"
+        android:layout_height="wrap_content"
+        android:text="Unfollow"
+        app:layout_constraintBottom_toBottomOf="@+id/view_action"
+        app:layout_constraintEnd_toEndOf="@+id/view_action"
+        app:layout_constraintStart_toStartOf="@+id/view_action"
+        app:layout_constraintTop_toBottomOf="@+id/view_status" />
+
     <ImageView
         android:id="@+id/profile_image"
         android:layout_width="80dp"
@@ -124,7 +136,6 @@
         android:id="@+id/profileRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
