--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -35,9 +35,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@+id/viewHolder_tip_profile_picture"
                 android:padding="4dp"
+                android:text="Match Name"
                 android:textColor="@color/blue"
                 android:textSize="18sp"
-                android:text="Match Name"
                 android:textStyle="bold" />
 
             <TextView
@@ -45,8 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewHolder_match_name"
-                android:padding="4dp"
                 android:layout_alignStart="@+id/viewHolder_match_name"
+                android:padding="4dp"
                 android:text="Israel Israeli"
                 android:textSize="12sp" />
 
@@ -65,8 +65,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewHolder_match_name"
-                android:padding="4dp"
                 android:layout_toEndOf="@+id/viewHolder_tip_dot_separator"
+                android:padding="4dp"
                 android:text="Sat 22:05"
                 android:textSize="12sp" />
 
@@ -78,29 +78,39 @@
                 android:layout_alignStart="@+id/viewHolder_match_name"
                 android:ellipsize="end"
                 android:maxEms="15"
+                android:layout_marginTop="8dp"
                 android:maxLines="3"
                 android:padding="4dp"
                 android:text="Tip Description"
                 android:textSize="15sp" />
 
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/viewHolder_tip_description"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="#ababab" />
+
             <TextView
                 android:id="@+id/viewHolder_tip_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/viewHolder_tip_description"
+                android:layout_below="@+id/divider"
                 android:layout_alignStart="@+id/viewHolder_tip_description"
                 android:padding="4dp"
                 android:text="Tip Value"
-                android:textSize="12sp"
                 android:textColor="@color/blue"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/viewHolder_tip_team_winner_logo"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:layout_above="@+id/divider"
                 android:layout_alignParentEnd="true"
-                android:layout_alignBottom="@id/viewHolder_tip_value"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 app:srcCompat="@drawable/draw" />
