--- a/app/src/main/res/layout/view_holder_tip.xml
+++ b/app/src/main/res/layout/view_holder_tip.xml
@@ -76,9 +76,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewHolder_tip_user_name"
                 android:layout_alignStart="@+id/viewHolder_match_name"
+                android:layout_marginTop="8dp"
                 android:ellipsize="end"
                 android:maxEms="15"
-                android:layout_marginTop="8dp"
                 android:maxLines="3"
                 android:padding="4dp"
                 android:text="Tip Description"
@@ -107,12 +107,12 @@
 
             <ImageView
                 android:id="@+id/viewHolder_tip_team_winner_logo"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_above="@+id/divider"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_below="@+id/divider"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="2dp"
+                android:layout_toEndOf="@+id/viewHolder_tip_value"
                 app:srcCompat="@drawable/draw" />
 
             <ImageView
